# opensync

./: .dockerignore  .gitignore  Cargo.toml  README.md  VISION.md  package.json  pnpm-lock.yaml  turbo.json  vercel.json
.claude/: settings.json
.cursor/plans/: app_ubuntu_opensync_sync_e42eae2d.plan.md  opensync-sync-engine-architecture.plan.md
.gitea/workflows/: opensync-core-deb.yml  opensync-ubuntu-deb.yml
.github/workflows/: core.yml
.obsidian/: workspace.json
.turbo/preferences/: tui.json
apps/api/: .env  .env.example  Dockerfile  fly.toml  jest.config.cjs  package.json  prisma.config.ts  tsconfig.build.json  tsconfig.docker.json  tsconfig.json
apps/api/prisma/: schema.prisma
apps/api/prisma/models/: agent.prisma  audit_log.prisma  commit.prisma  file_link.prisma  profile.prisma  user_api_key.prisma  vault.prisma  vault_file.prisma  vault_file_change.prisma  vault_file_upload_pending.prisma  vault_gitea_mirror_state.prisma  vault_graph.prisma  workspace.prisma  workspace_collab.prisma
apps/api/src/: app.module.ts  health.controller.ts  main.ts
apps/api/src/collab/: collab-token.util.ts  collab-yjs-ws-setup.ts  collab-yjs.service.ts  collab.module.ts
apps/api/src/common/: agent-token.util.ts  agent-vault.resolve.ts  prisma-exception.filter.ts
apps/api/src/contracts/: vault-sse-event.ts
apps/api/src/ionos/: ionos-infra.service.ts  ionos.module.ts
apps/api/src/sync/: gitea.service.spec.ts  gitea.service.ts  openssh-keygen.util.ts  sync.controller.ts  sync.module.ts  vault-git-sync.service.spec.ts  vault-git-sync.service.ts
apps/api/src/user/: user.controller.ts  user.module.ts  user.service.ts
apps/api/src/user-access-keys/: user-access-keys.controller.ts  user-access-keys.module.ts  user-access-keys.service.ts  user-access-keys.util.ts
apps/api/src/vault-files/: agent-vault.controller.ts  (+8 more)
apps/core/: Cargo.toml
apps/core/packaging/: opensync.service
apps/core/packaging/debian/: postinst  preinst
apps/core/src/: main.rs
apps/desktop/: .gitignore  README.md  index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/src/: app.tsx  main.tsx  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/opensync-ubuntu/: README.md  package.json  tsconfig.json
apps/opensync-ubuntu/packaging/: build-deb.sh  opensync-ubuntu_0.1.0_amd64.deb.sha256  opensync-ubuntu_0.1.2_amd64.deb.sha256  opensync-ubuntu_0.1.3_amd64.deb.sha256  opensync-ubuntu_0.2.0_amd64.deb.sha256  opensync-ubuntu_0.2.1_amd64.deb.sha256  opensync-ubuntu_0.3.0_amd64.deb  opensync-ubuntu_0.3.0_amd64.deb.sha256
apps/opensync-ubuntu/scripts/: build-cli.cjs
apps/opensync-ubuntu/src/: api.ts  cli.ts  config.ts  db.ts  engine.ts
apps/web/: .env.example  next.config.ts  package-lock.json  package.json  tsconfig.json  vitest.config.ts
apps/web/scripts/: verify-supabase-auth.sh
apps/web/src/: proxy.ts
crates/sync-core/: Cargo.toml
crates/sync-core/src/: api.rs  config.rs  db.rs  engine.rs  hash.rs  ignore.rs  lib.rs  merge.rs  suppressed.rs  user_api.rs
deploy/ionos/: README.md  VAULT-REPOS.txt  bootstrap-remote.sh  docker-compose.yml  gitea.env.example
docs/: VISION.md
docs/PRDs/: opensync_prd_FULL.md
docs/dev/: README.md  billing-stripe-subscription-plan.md  fly-ionos-ssh.md  gitea-ionos-first-install.md  gitea-supabase-postgres.md  openclaw-agent-sync.md  opensync-openclaw-skill.md  supabase-rls-implementation.md  sync-architecture.md  sync-engine-v2.md  tauri-desktop-mobile-architecture.md  vault-git-api.md
docs/dev/scripts/: opensync-vps-git-sync.sh
docs/dev/templates/: vault-gitignore
scripts/: build-opensync-core-deb.mjs  build-opensync-ubuntu-deb.mjs  dev-clean.mjs  diagnose-opensync-agent.sh  prisma-menu.mjs
scripts/lib/: supabase-deb-upload.mjs
supabase/migrations/: 20260407140000_profiles_saved_vaults.sql  20260407190000_create_vaults_table.sql
(+264 files in other folders)
