[workspace]
members = [
    "crates/sync-core",
    "apps/core",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
authors = ["OpenSync"]

[workspace.dependencies]
tokio        = { version = "1", features = ["full"] }
reqwest      = { version = "0.12", features = ["json", "rustls-tls", "stream"], default-features = false }
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
anyhow       = "1"
rusqlite     = { version = "0.31", features = ["bundled"] }
notify       = "6"
sha2         = "0.10"
hex          = "0.4"
uuid         = { version = "1", features = ["v4"] }
dirs         = "5"
similar      = "2"
urlencoding  = "2"
chrono       = { version = "0.4", features = ["serde"] }
tracing      = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap         = { version = "4", features = ["derive"] }
