[package]
name    = "sync-core"
version = "0.1.0"
edition.workspace = true

[dependencies]
tokio.workspace       = true
reqwest.workspace     = true
serde.workspace       = true
serde_json.workspace  = true
anyhow.workspace      = true
rusqlite.workspace    = true
notify.workspace      = true
sha2.workspace        = true
hex.workspace         = true
uuid.workspace        = true
dirs.workspace        = true
similar.workspace     = true
urlencoding.workspace = true
chrono.workspace      = true
tracing.workspace     = true
futures-util = "0.3"
bytes = "1"
