[package]
name        = "opensync-desktop"
version     = "0.1.0"
description = "OpenSync Desktop — sincronização bidirecional de vaults"
edition.workspace = true
license.workspace = true

[lib]
name       = "opensync_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
sync-core             = { path = "../../../crates/sync-core" }
tauri                 = { version = "2", features = [] }
tauri-plugin-shell    = "2"
tauri-plugin-dialog   = "2"
tauri-plugin-opener   = "2"
serde                 = { workspace = true }
serde_json            = { workspace = true }
anyhow                = { workspace = true }
tokio                 = { workspace = true }
reqwest               = { workspace = true }
chrono                = { workspace = true }
tracing               = { workspace = true }
tracing-subscriber    = { workspace = true }
dirs                  = { workspace = true }
thiserror             = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
